--- a/animation/slider/index.html
+++ b/animation/slider/index.html
@@ -18,5 +18,8 @@
         </ul>
     </div>
 </div>
+
+<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
