--- a/animation/slider/index.html
+++ b/animation/slider/index.html
@@ -20,6 +20,7 @@
 </div>
 
 <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/slider.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
