New: Remove li dom id.

--- a/animation/slider/index.html
+++ b/animation/slider/index.html
@@ -12,9 +12,9 @@
 <div class="container">
     <div class="slider" id="slider">
         <ul>
-            <li id="slider-item0"><img src="images/who.png"></li>
-            <li id="slider-item1"><img src="images/protect.png"></li>
-            <li id="slider-item2"><img src="images/net_cfg.png"></li>
+            <li><img src="images/who.png"></li>
+            <li><img src="images/protect.png"></li>
+            <li><img src="images/net_cfg.png"></li>
         </ul>
     </div>
 </div>
