--- a/animation/slider/index.html
+++ b/animation/slider/index.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/jquery-3.2.1.js"></script>
 <script type="text/javascript" src="js/slider.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 </body>
