New: Add slider navigate dots.

--- a/animation/slider/index.html
+++ b/animation/slider/index.html
@@ -11,10 +11,15 @@
 
 <div class="container">
     <div class="slider" id="slider">
-        <ul>
+        <ul class="slider-bg-ul" id="slider-bg-ul">
             <li><img src="images/who.png"></li>
             <li><img src="images/protect.png"></li>
             <li><img src="images/net_cfg.png"></li>
+        </ul>
+        <ul class="slider-nav-ul" id="slider-nav-ul">
+            <li></li>
+            <li></li>
+            <li></li>
         </ul>
     </div>
 </div>
