New: Add mouse hover page navigation.

--- a/animation/slider/index.html
+++ b/animation/slider/index.html
@@ -16,13 +16,18 @@
             <li><img src="images/protect.png"></li>
             <li><img src="images/net_cfg.png"></li>
         </ul>
-        <ul class="slider-nav-ul" id="slider-nav-ul">
+        <ul class="slider-nav-dot-ul" id="slider-nav-dot-ul">
             <li></li>
             <li></li>
             <li></li>
         </ul>
+        <div class="slider-nav-page left" slide-dir="prev">
+        </div>
+        <div class="slider-nav-page right" slide-dir="next">
+        </div>
     </div>
 </div>
+
 
 <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
 <script type="text/javascript" src="js/slider.js"></script>
