Mod: Use better img.

--- a/animation/slider/index.html
+++ b/animation/slider/index.html
@@ -12,11 +12,17 @@
 <div class="container">
     <div class="slider" id="slider">
         <ul class="slider-bg-ul" id="slider-bg-ul">
-            <li><img src="images/who.png"></li>
-            <li><img src="images/protect.png"></li>
-            <li><img src="images/net_cfg.png"></li>
+            <li><img src="images/1.jpg"></li>
+            <li><img src="images/2.jpg"></li>
+            <li><img src="images/3.jpg"></li>
+            <li><img src="images/4.jpg"></li>
+            <li><img src="images/5.jpg"></li>
+            <li><img src="images/6.jpg"></li>
         </ul>
         <ul class="slider-nav-dot-ul" id="slider-nav-dot-ul">
+            <li></li>
+            <li></li>
+            <li></li>
             <li></li>
             <li></li>
             <li></li>
