New: Finish all slider features.

--- a/animation/slider/index.html
+++ b/animation/slider/index.html
@@ -27,9 +27,9 @@
             <li></li>
             <li></li>
         </ul>
-        <div class="slider-nav-page left" slide-dir="prev">
+        <div class="slider-nav-page left" id="slider-nav-page-left">
         </div>
-        <div class="slider-nav-page right" slide-dir="next">
+        <div class="slider-nav-page right" id="slider-nav-page-right">
         </div>
     </div>
 </div>
